add volunteer detail listing to the top of the event report